tests/paczka2/big_fuzzy/69556519.err
Error in line 7: mMqdW S4}8 63,7
Error in line 2: Q2Eo4 S458 45,1
Error in line 8: Q2Eo4 S696 76,1
Error in line 5: mMqdW S696 34,0
Error in line 16: CMX51fU S458 88,8
Error in line 11: Q2Eo4 S613 97,0
Error in line 12: mMqdW S458 176,4
Error in line 28: CMX51fU S613 122,9
Error in line 37: Q2Eo4 A131 10,6
Error in line 38: Q2Eo4 S613 67,4
Error in line 30: 0PxVPjIU S458 30,6
Error in line 35: CMX51fU A131 5,8
Error in line 46: 0PxVPjIU S696 23,6
Error in line 52: 0PxVPjIU A131 425,88
Error in line 56: Q2Eo4 S696 41,15
Error in line 44: Hji3BD S458 111,8
Error in line 74: 0PxVPjIU S696 123,0
Error in line 83: 0PxVPjIU S613 54,7
Error in line 95: S458 S613 12,38
Error in line 87: Q2Eo4 S613 202,0
Error in line 91: Hji3BD S458 5,2
Error in line 98: Hji3BD S458 5,63
Error in line 96: Q2Eo4 S696 31,4
Error in line 97: Hji3BD S613 43,5
Error in line 89: mMqdW A131 85,4
Error in line 104: CMX51fU S613 79,2
Error in line 106: mMqdW S696 76,2
Error in line 109: CMX51fU A131 79,7
Error in line 114: CMX51fU S696 97,1
Error in line 111: mMqdW S458 30,7
Error in line 115: 0PxVPjIU S458 215,1
Error in line 102: aweqNi S696 12,6
Error in line 132: S458 A131 -2,9
Error in line 131: 0PxVPjIU S696 19,4
Error in line 112: Hji3BD S458 96,4
Error in line 136: Hji3BD S696 35,5
Error in line 149: Hji3BD S696 44,8
Error in line 154: Q2Eo4 S696 28,4
Error in line 162: mMqdW A131 58,4
Error in line 170: aweqNi S613 82,6
Error in line 178: S458 S696 322,9
Error in line 180: CMX51fU S696 50,5
Error in line 196: S458 S458 26,6
Error in line 204: Q2Eo4 S696 6,3
Error in line 210: Q2Eo4 A131 12,8
Error in line 208: S458 A131 6,3
Error in line 215: 0PxVPjIU A131 12,0
Error in line 219: Hji3BD S696 339,6
Error in line 223: S458 S458 92,0
Error in line 226: Hji3BD A131 59,6
Error in line 230: mMqdW S696 70,0
Error in line 224: 0PxVPjIU S458 286,4
Error in line 236: CMX51fU S696 75,6
Error in line 239: CMX51fU A131 48,0
Error in line 237: 0PxVPjIU S613 20,4
Error in line 245: 0PxVPjIU S696 15,4
